2007-01-24  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by harrison
        
        Adding this layout test for a bug fixed by the changes
        in r19088.

        * editing/execCommand/4916402-expected.checksum: Added.
        * editing/execCommand/4916402-expected.png: Added.
        * editing/execCommand/4916402-expected.txt: Added.
        * editing/execCommand/4916402.html: Added.

2007-01-24  Adele Peterson  <adele@apple.com>

        Reviewed by Darin.

        Test for <rdar://problem/4943650> REGRESSION: insertion point blink in form field redraws entire web page, making everything slow

        * fast/events/arrow-navigation-expected.txt: Added.
        * fast/events/arrow-navigation.html: Added.

2007-01-24  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Maciej.

        Fix tests and update test results.
        
        * fast/dom/gc-6-expected.txt:
        * fast/dom/gc-6.html:
        * fast/dom/gc-7-expected.txt:
        * fast/dom/gc-7.html:

2007-01-23  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by harrison
        
        <rdar://problem/4916235>
        <rdar://problem/4857269>
        <rdar://problem/4916583>
        <rdar://problem/4928635>
        
        Fixed and removed FIXME:
        * editing/execCommand/create-list-from-range-selection-expected.checksum:
        * editing/execCommand/create-list-from-range-selection-expected.png:
        * editing/execCommand/create-list-from-range-selection-expected.txt:
        * editing/execCommand/create-list-from-range-selection.html:
        Added:
        * editing/deleting/4916235-1-expected.txt: Added.
        * editing/deleting/4916235-1.html: Added.
        * editing/execCommand/4916235-expected.txt: Added.
        * editing/execCommand/4916235.html: Added.
        * editing/execCommand/4916583-expected.checksum: Added.
        * editing/execCommand/4916583-expected.png: Added.
        * editing/execCommand/4916583-expected.txt: Added.