@@ -1,0 +1,7 @@
+<html>
+<script>
+var f = parent.document.getElementsByTagName('iframe')[0]
+f.onload = function() { if (window.layoutTestController) layoutTestController.notifyDone(); }
+f.src="about:blank"
+</script>
+</html>
