@@ -1,0 +1,6 @@
+
+This tests that a frame can set its src to "about:blank" while running inside a <script> without an assertion failing.
+
+SUCCESS - Didn't crash!
+
+
